<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/main_panel">

        <!-- widget smartwatch'a -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/smartWatchWidget">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/smartwatch_widget_not_set"
                android:id="@+id/widgetLineNameTextView" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/widgetCurrentBusStopTextView"
                    android:layout_weight="4"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="→"
                    android:id="@+id/widgetArrow"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/widgetDirectionTextView"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:layout_weight="4"/>
            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/widgetHoursTextView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="right"
                android:gravity="right"
                android:text=""
                android:id="@+id/timeToDeparture" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/info_layout"
                android:weightSum="6"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_warning_black_48dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="info"
                    android:id="@+id/widget_info"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="5"/>

            </LinearLayout>


        </LinearLayout>


        <!-- widget alarmu -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/alarmWidget"
            android:layout_below="@+id/smartWatchWidget">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=" "
                    android:id="@+id/oneLineSpace" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    android:text="@string/alarm_widget_not_set"
                    android:id="@+id/alarmLineTextView" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="9">
                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                        <!--android:text="@string/alarm_widget_not_set"-->
                        <!--android:id="@+id/alarmLineTextView" />-->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:id="@+id/alarmCurrentBusStopTextView"
                        android:layout_weight="4"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="→"
                        android:id="@+id/alarmArrow"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:text=""
                        android:id="@+id/alarmLastBusStopTextView"

                        android:layout_weight="4"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/alarmDateTextView" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/alarmRememberBefore" />



            </LinearLayout>
            <ImageButton
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:id="@+id/main_turn_off_notification"
                android:src="@drawable/ic_notifications_off_black_48dp"
                android:layout_gravity="center"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/buttonField"
            android:layout_below="@+id/alarmWidget">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:baselineAligned="false">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_bus_stop_button"
                    android:id="@+id/menu_bus_stop_button"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_bus_line_button"
                    android:id="@+id/menu_bus_line_button"
                    android:layout_below="@+id/menu_bus_stop_button"
                    android:layout_alignLeft="@+id/menu_bus_stop_button"
                    android:layout_alignStart="@+id/menu_bus_stop_button" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/loading">
        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="@dimen/wheel_layout_width"
            android:layout_height="@dimen/wheel_layout_height"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:matProg_barColor="@color/colorProgressWheel"
            app:matProg_progressIndeterminate="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/loading_data"/>
    </LinearLayout>



</LinearLayout>
</RelativeLayout>
